[gd_scene load_steps=18 format=3 uid="uid://c12tcsrham0oa"]

[ext_resource type="Script" path="res://computer_screen.gd" id="1_nua6c"]
[ext_resource type="Texture2D" uid="uid://dsu721o3alker" path="res://laptop_black_screen.png" id="1_xjxrj"]
[ext_resource type="Texture2D" uid="uid://b6j6qday55sj1" path="res://loading2.png" id="2_x7h3j"]
[ext_resource type="Texture2D" uid="uid://dr5kxsvkaqkwd" path="res://youtubeLogo.png" id="6_s1imd"]
[ext_resource type="Texture2D" uid="uid://dwp0smdry88cy" path="res://bank (1).png" id="7_0clwa"]
[ext_resource type="Texture2D" uid="uid://d2kmir8gsg3e8" path="res://youtubeLogoPressed.png" id="7_yvelp"]
[ext_resource type="Texture2D" uid="uid://xuqv753ygu4u" path="res://pngwing.com (4).png" id="8_aqjcx"]
[ext_resource type="Texture2D" uid="uid://cnc6pvksau3bm" path="res://pngegg (1).png" id="9_xmo4l"]
[ext_resource type="FontFile" uid="uid://of2g6xqam0ls" path="res://yoster.ttf" id="12_75ccl"]
[ext_resource type="AudioStream" uid="uid://cu86cdu7c7o6" path="res://game_music.mp3" id="13_tfft1"]
[ext_resource type="PackedScene" uid="uid://dr7quioi2l4du" path="res://youtube.tscn" id="14_148xh"]
[ext_resource type="FontFile" uid="uid://dq8kvjifh2xmf" path="res://joystix monospace.otf" id="16_yn3t0"]
[ext_resource type="PackedScene" uid="uid://nrwuwt26y6wb" path="res://freelance_app.tscn" id="18_f35jw"]

[sub_resource type="LabelSettings" id="LabelSettings_lyv5q"]
font = ExtResource("16_yn3t0")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_al28m"]
font = ExtResource("16_yn3t0")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0acr1"]
draw_center = false

[sub_resource type="LabelSettings" id="LabelSettings_bx0bf"]
font = ExtResource("12_75ccl")
font_size = 32

[node name="computer_screen" type="Node2D"]
script = ExtResource("1_nua6c")

[node name="screen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_xjxrj")

[node name="loading" type="Sprite2D" parent="screen"]
position = Vector2(-1.00136e-05, 20)
scale = Vector2(0.839506, 0.839506)
texture = ExtResource("2_x7h3j")

[node name="AppsButtons" type="Node2D" parent="screen"]
visible = false

[node name="utube" type="TextureButton" parent="screen/AppsButtons"]
offset_left = -936.0
offset_top = -516.0
offset_right = -772.0
offset_bottom = -357.0
scale = Vector2(0.402373, 0.402373)
texture_normal = ExtResource("6_s1imd")
texture_pressed = ExtResource("7_yvelp")
ignore_texture_size = true
stretch_mode = 4

[node name="cashing_app" type="TextureButton" parent="screen/AppsButtons"]
offset_left = -936.0
offset_top = -428.0
offset_right = -872.0
offset_bottom = -364.0
texture_normal = ExtResource("8_aqjcx")
ignore_texture_size = true
stretch_mode = 4

[node name="bank" type="TextureButton" parent="screen/AppsButtons"]
modulate = Color(0.282353, 1, 0.313726, 1)
offset_left = -936.0
offset_top = -340.0
offset_right = -872.0
offset_bottom = -276.0
texture_normal = ExtResource("7_0clwa")
ignore_texture_size = true
stretch_mode = 4

[node name="power_off" type="TextureButton" parent="screen/AppsButtons"]
offset_left = 880.0
offset_top = 460.0
offset_right = 944.0
offset_bottom = 524.0
texture_normal = ExtResource("9_xmo4l")
ignore_texture_size = true
stretch_mode = 4

[node name="Apps" type="Node2D" parent="screen"]
visible = false

[node name="Youtube" parent="screen/Apps" instance=ExtResource("14_148xh")]
visible = false
position = Vector2(0, 64)

[node name="ColorRect" type="ColorRect" parent="screen/Apps"]
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = -476.0
color = Color(1, 1, 1, 0.545098)

[node name="close_button" type="Button" parent="screen/Apps/ColorRect"]
layout_mode = 0
offset_left = 1856.0
offset_right = 1920.0
offset_bottom = 64.0
flat = true

[node name="Label" type="Label" parent="screen/Apps/ColorRect/close_button"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
text = "X"
label_settings = SubResource("LabelSettings_lyv5q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="freelance_app" parent="screen/Apps" instance=ExtResource("18_f35jw")]
visible = false
position = Vector2(0, 68)

[node name="bank" type="Node2D" parent="screen/Apps"]
visible = false

[node name="ColorRect" type="ColorRect" parent="screen/Apps/bank"]
offset_left = -960.0
offset_top = -476.0
offset_right = 960.0
offset_bottom = 540.0
color = Color(0.352941, 0.647059, 0, 1)

[node name="balance_label" type="Label" parent="screen/Apps/bank"]
offset_left = -448.0
offset_top = -180.0
offset_right = 448.0
offset_bottom = -103.0
text = "Current Balance:"
label_settings = SubResource("LabelSettings_al28m")
horizontal_alignment = 1

[node name="cash" type="Label" parent="screen/Apps/bank"]
offset_left = -448.0
offset_top = -92.0
offset_right = 448.0
offset_bottom = -15.0
text = "0ðŸ’²"
label_settings = SubResource("LabelSettings_al28m")
horizontal_alignment = 1

[node name="Tutorial" type="Panel" parent="screen"]
visible = false
offset_right = 168.0
offset_bottom = 272.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0acr1")

[node name="ColorRect" type="ColorRect" parent="screen/Tutorial"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.095
anchor_top = -0.5
anchor_right = -0.095
anchor_bottom = -0.5
offset_left = -840.04
offset_top = -404.0
offset_right = 1039.96
offset_bottom = 796.0
color = Color(0.207843, 0, 0.592157, 0.368627)

[node name="ColorRect2" type="ColorRect" parent="screen/Tutorial"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.095
anchor_top = -0.5
anchor_right = -0.095
anchor_bottom = -0.5
offset_left = -1152.04
offset_top = -212.0
offset_right = -840.04
offset_bottom = 988.0
color = Color(0.207843, 0, 0.592157, 0.368627)

[node name="ColorRect3" type="ColorRect" parent="screen/Tutorial"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.095
anchor_top = -0.5
anchor_right = -0.095
anchor_bottom = -0.5
offset_left = -1056.04
offset_top = -868.0
offset_right = -840.04
offset_bottom = -308.0
color = Color(0.207843, 0, 0.592157, 0.368627)

[node name="Label" type="Label" parent="screen/Tutorial"]
z_index = 5
layout_mode = 0
offset_left = -768.0
offset_top = -428.0
offset_right = -224.0
offset_bottom = -359.0
text = "Click on the \"Cashing App\" to gain money by programming!!!"
label_settings = SubResource("LabelSettings_bx0bf")
vertical_alignment = 1
autowrap_mode = 2

[node name="Halal_music" type="AudioStreamPlayer2D" parent="screen"]
stream = ExtResource("13_tfft1")
volume_db = -11.844

[connection signal="pressed" from="screen/AppsButtons/utube" to="." method="_on_utube_pressed"]
[connection signal="pressed" from="screen/AppsButtons/cashing_app" to="." method="_on_cashing_app_pressed"]
[connection signal="pressed" from="screen/AppsButtons/bank" to="." method="_on_bank_pressed"]
[connection signal="pressed" from="screen/AppsButtons/power_off" to="." method="_on_power_off_pressed"]
[connection signal="pressed" from="screen/Apps/ColorRect/close_button" to="." method="_on_close_button_pressed"]
